--- a/src/locales/en-US/strings.json
+++ b/src/locales/en-US/strings.json
@@ -7,19 +7,20 @@
     "GUESS": "Guess the flag",
     "GUESSED": "%REPL% have guessed!",
     "STARTING": "Starting",
-    "CORRECT_ANSWERS": "You answered correctly %REPL% times",
-    "POINTS": "You got %REPL% points",
+    "CORRECT_ANSWERS": "you answered correctly %REPL% times",
+    "POINTS": "You got %REPL% points!",
     "DOES_NOT_HAVE": "Does not have",
     "OFFICIAL_NAME": "OFFICIAL NAME",
     "CAPITAL": "CAPITAL",
     "CONTINENT": "CONTINENT",
-    "SUBREGION": "SUBREGION",
+    "REGION": "REGION",
     "BORDERS_WITH": "BORDERS",
     "AREA": "AREA",
-    "COUNTRY_NOT_VALID": "Cannot find that country",
+    "COUNTRY_NOT_FOUND": "Cannot find that country",
     "IN_USE": "Someone is playing, please wait!",
     "ALREADY_PLAYED": "You have already played today, come back tomorrow!",
     "LEADERBOARD": "🏆  LEADERBOARD",
     "TOP_10": "TOP 10",
-    "EMPTY_LEADERBOARD": "Empty, for now."
+    "EMPTY_LEADERBOARD": "Empty, for now.",
+    "SORTED_BY": "Sorted by:\n > score\n > days played"
 }
