--- a/src/locales/es-ES/strings.json
+++ b/src/locales/es-ES/strings.json
@@ -7,19 +7,20 @@
     "GUESS": "Adivina la bandera",
     "GUESSED": "%REPL% ha adivinado!",
     "STARTING": "Comenzando",
-    "CORRECT_ANSWERS": "Respondiste correctamente %REPL% veces",
-    "POINTS": "Obtuviste %REPL% puntos",
+    "CORRECT_ANSWERS": "respondiste correctamente %REPL% veces",
+    "POINTS": "Obtuviste %REPL% puntos!",
     "DOES_NOT_HAVE": "No tiene",
     "OFFICIAL_NAME": "NOMBRE OFICIAL",
     "CAPITAL": "CAPITAL",
     "CONTINENT": "CONTINENTE",
-    "SUBREGION": "REGION",
-    "BORDERS_WITH": "LIMITES",
+    "REGION": "REGION",
+    "BORDERS_WITH": "LIMITA CON",
     "AREA": "SUPERFICIE",
-    "COUNTRY_NOT_VALID": "No puedo encontrar ese pais",
+    "COUNTRY_NOT_FOUND": "No puedo encontrar ese pais",
     "IN_USE": "Alguien esta jugando, por favor espera!",
     "ALREADY_PLAYED": "Ya has jugado hoy, vuelve mañana!",
     "LEADERBOARD": "🏆  CLASIFICACION",
     "TOP_10": "TOP 10",
-    "EMPTY_LEADERBOARD": "Está vacía, por ahora."
+    "EMPTY_LEADERBOARD": "Está vacía, por ahora.",
+    "SORTED_BY": "Ordenados por:\n > puntos\n > dias jugados"
 }
